--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@radix-ui/react-label": "^2.1.0",
     "@shadcn/ui": "^0.0.4",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "next": "^15.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "eslint": "^8",
